crates/ruff/src/rules/flake8_logging_format/snapshots/ruff__rules__flake8_logging_format__tests__G002.py.snap
---
source: crates/ruff/src/rules/flake8_logging_format/mod.rs
expression: diagnostics
---
- kind:
    name: LoggingPercentFormat
    body: "Logging statement uses `%`"
    suggestion: ~
    fixable: false
  location:
    row: 3
    column: 13
  end_location:
    row: 3
    column: 34
  fix: ~
  parent: ~
- kind:
    name: LoggingPercentFormat
    body: "Logging statement uses `%`"
    suggestion: ~
    fixable: false
  location:
    row: 4
    column: 26
  end_location:
    row: 4
    column: 47
  fix: ~
  parent: ~

