crates/ruff/src/rules/flake8_logging_format/snapshots/ruff__rules__flake8_logging_format__tests__G003.py.snap
---
source: crates/ruff/src/rules/flake8_logging_format/mod.rs
expression: diagnostics
---
- - kind:
      name: LoggingStringConcat
      body: "Logging statement uses `+`"
      suggestion: ~
      fixable: false
    location:
      row: 3
      column: 13
    end_location:
      row: 3
      column: 37
    fix: ~
    parent: ~

