crates/ruff/src/rules/flake8_logging_format/snapshots/ruff__rules__flake8_logging_format__tests__G004.py.snap
---
source: crates/ruff/src/rules/flake8_logging_format/mod.rs
expression: diagnostics
---
- kind:
    name: LoggingFString
    body: Logging statement uses f-string
    suggestion: ~
    fixable: false
  location:
    row: 4
    column: 13
  end_location:
    row: 4
    column: 28
  fix: ~
  parent: ~
- kind:
    name: LoggingFString
    body: Logging statement uses f-string
    suggestion: ~
    fixable: false
  location:
    row: 5
    column: 26
  end_location:
    row: 5
    column: 41
  fix: ~
  parent: ~

