crates/ruff/src/rules/flake8_logging_format/snapshots/ruff__rules__flake8_logging_format__tests__G101_1.py.snap
---
source: crates/ruff/src/rules/flake8_logging_format/mod.rs
expression: diagnostics
---
- kind:
    name: LoggingExtraAttrClash
    body: "Logging statement uses an extra field that clashes with a LogRecord field: `name`"
    commit: ~
    fixable: false
  location:
    row: 6
    column: 8
  end_location:
    row: 6
    column: 14
  fix: ~
  parent: ~

