crates/ruff/src/rules/flake8_logging_format/snapshots/ruff__rules__flake8_logging_format__tests__G201.py.snap
---
source: crates/ruff/src/rules/flake8_logging_format/mod.rs
expression: diagnostics
---
- - kind:
      name: LoggingExcInfo
      body: "Logging `.exception(...)` should be used instead of `.error(..., exc_info=True)`"
      suggestion: ~
      fixable: false
    location:
      row: 8
      column: 12
    end_location:
      row: 8
      column: 17
    fix: ~
    parent: ~
  - kind:
      name: LoggingExcInfo
      body: "Logging `.exception(...)` should be used instead of `.error(..., exc_info=True)`"
      suggestion: ~
      fixable: false
    location:
      row: 13
      column: 12
    end_location:
      row: 13
      column: 17
    fix: ~
    parent: ~

